# Uklad_Automatycznej_Regulacji

./: CMakeLists.txt  Grzejnik.cpp  Grzejnik.h  POMIESZCZENIE.cpp  POMIESZCZENIE.h  Regulator.h  RegulatorBB.cpp  RegulatorBB.h  RegulatorException.h  RegulatorPID.cpp  RegulatorPID.h  Symulacja.cpp  Symulacja.h  WyjatekDzieleniePrzez0.h  WyjatekRegulator.h  main.cpp
